# fw-beacon

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
main/: Beacon_Device_main.c  CMakeLists.txt  client.crt  client.key
main/HW_Interface/BLE/: BLE_handler.c  BLE_handler.h
main/HW_Interface/Flash_Driver/: FlashHandler.c  FlashHandler.h
main/HW_Interface/GPIO/: OutputControl.c  OutputControl.h
main/HW_Interface/Watchdog/: WatchDog.c  WatchDog.h
main/HW_Interface/Wifi/: Wifi_handler.c  Wifi_handler.h
main/SW_Interface/DateTime/: DateTime.c  DateTime.h  myCronJob.c  myCronJob.h
main/SW_Interface/Mqtt/: MqttHandler.c  MqttHandler.h  ProtocolHandler.c  ProtocolHandler.h
main/SW_Interface/OTA/: HttpHandler.c  HttpHandler.h  OTA_http.c  OTA_http.h
main/SW_Interface/Wifi_Config/: gateway_config.c  gateway_config.h
main/Utility/: Global.h  HTG_Utility.c  HTG_Utility.h  timeCheck.c  timeCheck.h
